kotlin-spring/feed/src/main/kotlin/com/example/feed/global/error/ErrorResponse.kt
package com.example.feed.global.error

interface ErrorResponse {

    val status: Int
    val message: String
}